# ai-news-agent

./: .env.example  .gitignore  README.md  Readme.md  main.py  pyproject.toml
.github/workflows/: weekly.yml
collector/: arxiv.py  base.py  github.py  rss.py
config/: config.yaml  loader.py  prompts.py
data/: news.db
database/: database.py  models.py
llm/: common.py  gemini.py  groq_client.py  router.py  summarize.py
newsletter/: email.py  html.py  markdown.py
output/: newsletter_2026-W28.html  newsletter_2026-W28.md  newsletter_2026-W29.html  newsletter_2026-W29.md  newsletter_2026-W30.html  newsletter_2026-W30.md
processing/: classifier.py  cleaner.py  deduplicate.py  pipeline.py  ranking.py
scheduler/: logging_setup.py  weekly.py
tests/: test_main.py  test_phase1_2.py  test_phase3.py  test_phase4_5.py
