[project]
name = "ai-news-agent"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.12",
    "pydantic>=2.13.4",
    "pytest>=9.1.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.51",
]
