[project]
name = "ai-news-agent"
version = "0.1.0"
description = "Personal AI Intelligence Agent - weekly AI/Data/ML news, filtered, ranked, and summarized."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "feedparser>=6.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
]
